implement the date title and increment_date button

--- a/app/src/main/res/menu/action_bar.xml
+++ b/app/src/main/res/menu/action_bar.xml
@@ -4,6 +4,12 @@
     <item android:id="@+id/action_bar_menu_add_goal"
         android:title="Add Goal"
         android:icon="@drawable/ic_add"
+        android:orderInCategory="2"
+        app:iconTint="@color/white"
+        app:showAsAction="always" />
+    <item android:id="@+id/action_bar_increment_date"
+        android:title="Inc Date"
+        android:icon="@drawable/ic_next"
         android:orderInCategory="1"
         app:iconTint="@color/white"
         app:showAsAction="always" />
