--- a/app/src/main/res/layout/placeholder.xml
+++ b/app/src/main/res/layout/placeholder.xml
@@ -7,14 +7,21 @@
 
     <TextView
         android:id="@+id/placeholder_text"
-        tools:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
-        android:textSize="34sp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:paddingLeft="23dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="16dp"
+        android:paddingRight="23dp"
+        android:text="@string/empty_list_greeting"
+        android:textSize="24sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.513"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
