--- a/app/src/main/res/layout/fragment_greeting.xml
+++ b/app/src/main/res/layout/fragment_greeting.xml
@@ -7,14 +7,16 @@
 
     <TextView
         android:id="@+id/placeholder_text"
-        tools:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder"
+        android:paddingLeft="23dp"
+        android:paddingRight="23dp"
+        android:text="@string/empty_list_greeting"
         android:textSize="34sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
