--- a/app/src/main/res/layout/fragment_dialog_add_goal.xml
+++ b/app/src/main/res/layout/fragment_dialog_add_goal.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,16 +19,69 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/Frequency"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_goal_edit_text">
+
+        <RadioButton
+            android:id="@+id/homeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#FFFF64"
+            android:button="@drawable/ic_home_foreground"
+            android:checked="true"
+            android:ellipsize="none" />
+
+        <RadioButton
+            android:id="@+id/workButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#64EDFF"
+            android:button="@drawable/ic_work_foreground"
+            android:includeFontPadding="false" />
+
+        <RadioButton
+            android:id="@+id/schoolButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#EA64FF"
+            android:button="@drawable/ic_school_foreground" />
+
+        <RadioButton
+            android:id="@+id/errandsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#64FF71"
+            android:button="@drawable/ic_errands_foreground" />
+
+    </RadioGroup>
+
+    <RadioGroup
         android:id="@+id/Frequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_goal_edit_text">
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup">
 
         <RadioButton
             android:id="@+id/one_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:text="one_time" />
 
         <RadioButton
